--- a/Raas.PCL/Raas.PCL.nuspec
+++ b/Raas.PCL/Raas.PCL.nuspec
@@ -5,18 +5,16 @@ This file was automatically generated for Tango Card, Inc. by APIMATIC v2.0 ( ht
 -->
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
-    <id>TangoCard.Raas</id>
+    <id>Raas.PCL</id>
     <version>1.1.2</version>
-    <title>Tango Card RaaS v2 SDK</title>
-    <authors>Tango Card, Inc.</authors>
-    <licenseUrl>https://github.com/tangocard/raas-v2-sdk-dotnet/blob/master/LICENSE</licenseUrl>
-    <projectUrl>https://github.com/tangocard/raas-v2-sdk-dotnet</projectUrl>
+    <title>Raas.PCL</title>
+    <authors>APIMATIC 2.0</authors>
     <iconUrl>https://nuget.org/Content/Images/packageDefaultIcon-50x50.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>With this RESTful API you can integrate a global reward or incentive program into your app or platform. If you have any questions or if you'd like to receive your own credentials, please contact us at devsupport@tangocard.com.</description>
     <summary />
     <releaseNotes />
-    <copyright>Copyright 2017 Tango Card, Inc.</copyright>
+    <copyright>Copyright 2016</copyright>
     <language>en-US</language>
         <dependencies>
             <dependency id="Unirest-APIMATIC" version="1.0.1.27" />
@@ -24,6 +22,5 @@ This file was automatically generated for Tango Card, Inc. by APIMATIC v2.0 ( ht
   </metadata>
   <files>
     <file src="bin\Release\Raas.PCL.dll" target="lib\Raas.PCL.dll" />
-    <file src="..\README.md" target="readme.txt" />
   </files>
 </package>
